// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboBox rendering renders expected elements 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={false}
    aria-invalid={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      {
        "icon": [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal>
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when error is not set 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={false}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      {
        "icon": [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal>
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when noLayer is true 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={false}
    aria-invalid={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    noLayer={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      {
        "icon": [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal>
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when the suggestions are displayed 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant="test-0"
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="x"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      {
        "icon": [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal>
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": null,
        }
      }
    >
      <div
        aria-selected={true}
        className="ComboBox__option TestClass"
        data-index={0}
        id="test-0"
        key={0}
        role="option"
      >
        Test suggestion 0
      </div>
      <div
        aria-selected={false}
        className="ComboBox__option TestClass"
        data-index={1}
        id="test-1"
        key={1}
        role="option"
      >
        Test suggestion 1
      </div>
    </Layer>
  </React.Portal>
</div>
`;
